Bug 53725 - Web_mobile: overlapping Alabama State on 'State' selection

--- a/skins/weborder_mobile/css/profile.css
+++ b/skins/weborder_mobile/css/profile.css
@@ -21,6 +21,10 @@
     margin-bottom: 1.4em;
 }
 
+.profile-form .select-wrapper.placeholder select {
+    opacity: 0;
+}
+
 .profile-form .account-password-input {
     position: relative;
 }
